<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#313338"
    android:orientation="vertical"
    tools:context=".ui.fragments.CreateVacancyFragment">

    <TextView
        android:id="@+id/create_vacancy_fragment_main_tittle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/Secondary_color_900"
        android:fontFamily="@font/roboto_bold"
        android:gravity="center_horizontal"
        android:padding="8dp"
        android:text="@string/create_vacancy_info_fragment_main_tittle"
        android:textColor="#efefef"
        android:textSize="22sp" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:overScrollMode="never">

        <LinearLayout
            android:id="@+id/create_vacancy_fragment_second_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:id="@+id/create_vacancy_fragment_name_tittle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:fontFamily="@font/roboto_bold"
                android:gravity="center_horizontal"
                android:text="@string/create_vacancy_info_fragment_name_tittle"
                android:textColor="#efefef"
                android:textSize="22sp" />

            <EditText
                android:id="@+id/create_vacancy_fragment_name_input"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_gravity="start"
                android:background="@drawable/edittext_background"
                android:fontFamily="@font/roboto_regular"
                android:hint="@string/create_vacancy_info_fragment_name_input"
                android:importantForAutofill="no"
                android:inputType="textEmailAddress"
                android:padding="16dp"
                android:textColor="#000000"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/create_vacancy_fragment_city_tittle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="8dp"
                android:fontFamily="@font/roboto_bold"
                android:gravity="center_horizontal"
                android:text="@string/create_vacancy_info_fragment_city_tittle"
                android:textColor="#efefef"
                android:textSize="22sp" />

            <EditText
                android:id="@+id/create_vacancy_fragment_city_input"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_gravity="start"
                android:background="@drawable/edittext_background"
                android:fontFamily="@font/roboto_regular"
                android:hint="@string/create_vacancy_info_fragment_city_input"
                android:importantForAutofill="no"
                android:inputType="textEmailAddress"
                android:padding="16dp"
                android:textColor="#000000"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/create_vacancy_fragment_description_tittle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="8dp"
                android:fontFamily="@font/roboto_bold"
                android:gravity="center_horizontal"
                android:text="@string/create_vacancy_info_fragment_description_tittle"
                android:textColor="#efefef"
                android:textSize="22sp" />

            <EditText
                android:id="@+id/create_vacancy_fragment_description_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edittext_background"
                android:fontFamily="@font/roboto_regular"
                android:gravity="top|start"
                android:hint="@string/create_vacancy_info_fragment_description_input"
                android:importantForAutofill="no"
                android:inputType="textMultiLine"
                android:lines="15"
                android:padding="16dp"
                android:textColor="#000000"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/create_vacancy_fragment_skills_list_tittle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="8dp"
                android:fontFamily="@font/roboto_bold"
                android:gravity="center_horizontal"
                android:text="@string/create_vacancy_skills_list_tittle"
                android:textColor="#efefef"
                android:textSize="22sp" />

            <TextView
                android:id="@+id/create_vacancy_empty_list_message"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="16dp"
                android:drawablePadding="8dp"
                android:gravity="center"
                android:text="@string/empty_list_message"
                android:textColor="#BEBEBE"
                android:textSize="20sp"
                android:visibility="gone"
                app:drawableEndCompat="@drawable/think" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/create_vacancy_fragment_skills_list"
                android:layout_width="match_parent"
                android:layout_height="450dp"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                android:overScrollMode="never" />

            <Button
                android:id="@+id/create_vacancy_fragment_create_button"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="15dp"
                android:backgroundTint="@color/Secondary_color_600"
                android:fontFamily="@font/roboto_bold"
                android:text="@string/create_vacancy_info_fragment_continue_button"
                android:textColor="#efefef"
                android:textSize="16sp" />

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

</LinearLayout>
