<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#313338"
    android:orientation="vertical"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    tools:context=".ui.fragments.UserProfileFragment">

    <LinearLayout
        android:id="@+id/user_profile_main_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical"
        android:visibility="visible">

        <TextView
            android:id="@+id/user_profile_city_tittle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/roboto_bold"
            android:gravity="center_horizontal"
            android:text="@string/user_profile_city_tittle"
            android:textColor="#efefef"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/user_profile_city_input"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="8dp"
            android:background="@drawable/edittext_background"
            android:fontFamily="@font/roboto_regular"
            android:hint="@string/user_profile_city_input"
            android:importantForAutofill="no"
            android:inputType="textEmailAddress"
            android:padding="16dp"
            android:textColor="#000000"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/user_profile_skill_list_tittle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="16dp"
            android:fontFamily="@font/roboto_bold"
            android:gravity="center_horizontal"
            android:text="@string/user_profile_skill_list_tittle"
            android:textColor="#efefef"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/user_profile_empty_list_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"
            android:drawablePadding="8dp"
            android:gravity="center"
            android:text="@string/empty_list_message"
            android:textColor="#BEBEBE"
            android:textSize="20sp"
            android:visibility="gone"
            app:drawableEndCompat="@drawable/think" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/user_profile_skill_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="16dp"
            android:overScrollMode="never"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager">

        </androidx.recyclerview.widget.RecyclerView>

    </LinearLayout>

    <ProgressBar
        android:id="@+id/user_profile_loading_progress_bar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:indeterminateTint="@color/Secondary_color_200"
        android:visibility="gone" />

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/user_profile_menu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#1e1f22"
        app:itemIconTint="@drawable/bottom_nav_color"
        app:itemTextColor="@drawable/bottom_nav_color"
        app:labelVisibilityMode="labeled"
        app:menu="@menu/bottom_navigation_menu_user" />

</LinearLayout>